--- a/assets/style.css
+++ b/assets/style.css
@@ -10,6 +10,12 @@
 
 body {
   background: #000000;
+  color: #ededed;
+}
+
+.blur {
+  filter: blur(2.5px);
+  text-shadow: 0 0 5px #00abf0;
 }
 
 .header {
@@ -18,7 +24,7 @@ body {
   left: 0;
   width: 100%;
   padding: 20px 10%;
-  background-color: rgb(18, 10, 129);
+  background-color: transparent;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -30,6 +36,7 @@ body {
   color: #ededed;
   text-decoration: none;
   font-weight: 600;
+  filter: blur(0.9px);
 }
 
 .navbar a {
@@ -39,3 +46,30 @@ body {
   font-weight: 500;
   margin-left: 35px;
 }
+
+.navbar a:hover,
+.navbar a.active {
+  color: #00abf0;
+}
+.home {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  padding: 0 10%;
+}
+
+.home-content {
+  max-width: 600px;
+}
+
+.home-content h1 {
+  font-size: 56px;
+  font-weight: 700;
+}
+.home-content h3 {
+  font-size: 32px;
+  font-weight: 700;
+  color: #00abf0;
+}
+
+/*  https://www.youtube.com/watch?v=RroDdybvu5s   left off @ 7:30   */
