--- a/assets/style.css
+++ b/assets/style.css
@@ -18,6 +18,10 @@ body {
   text-shadow: 0 0 5px #00abf0;
 }
 
+.blur:hover {
+  filter: blur(0px);
+}
+
 .header {
   position: fixed;
   top: 0;
@@ -72,4 +76,34 @@ body {
   color: #00abf0;
 }
 
-/*  https://www.youtube.com/watch?v=RroDdybvu5s   left off @ 7:30   */
+.home-content p {
+  font-size: 16px;
+}
+
+.home-content .btn-box {
+  display: flex;
+  justify-content: space-between;
+  width: 345px;
+  height: 50px;
+}
+
+.btn-box a {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 150px;
+  height: 100%;
+  background: #00abf0;
+  border: 2px solid #00abf0;
+  border-radius: 8px;
+  font-size: 19px;
+  color: rgb(16, 19, 19);
+  text-decoration: none;
+  font-weight: 600;
+  letter-spacing: 1px;
+}
+
+.btn-box a:nth-child(1) {
+  background: transparent;
+  color: #00abf0;
+}
