--- a/assets/style.css
+++ b/assets/style.css
@@ -9,13 +9,12 @@
 }
 
 body {
-  background: #000000;
   color: #ededed;
 }
 
 .blur {
   filter: blur(2.5px);
-  text-shadow: 0 0 5px #00abf0;
+  text-shadow: 0 0 5px #197ca3;
 }
 
 .blur:hover {
@@ -23,7 +22,7 @@ body {
 }
 
 .header {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
@@ -36,11 +35,25 @@ body {
   opacity: 0.9;
 }
 .logo {
+  position: relative;
   font-size: 30px;
   color: #ededed;
   text-decoration: none;
   font-weight: 600;
   filter: blur(0.9px);
+}
+
+.logo::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background: #197ca3;
+  animation: showRight 1s ease forwards;
+  animation-delay: 0.1s;
+  border-radius: 8px;
 }
 
 .navbar a {
@@ -49,14 +62,17 @@ body {
   text-decoration: none;
   font-weight: 500;
   margin-left: 35px;
+  margin-top: 80px;
 }
 
 .navbar a:hover,
 .navbar a.active {
-  color: #00abf0;
+  color: #197ca3;
 }
 .home {
   height: 100vh;
+
+  background: url("images/beach.jpg") no-repeat center center/cover;
   display: flex;
   align-items: center;
   padding: 0 10%;
@@ -69,15 +85,17 @@ body {
 .home-content h1 {
   font-size: 56px;
   font-weight: 700;
+  line-height: 1.2;
 }
 .home-content h3 {
   font-size: 32px;
   font-weight: 700;
-  color: #00abf0;
+  color: #197ca3;
 }
 
 .home-content p {
   font-size: 16px;
+  margin: 20px 0 40px;
 }
 
 .home-content .btn-box {
@@ -88,12 +106,13 @@ body {
 }
 
 .btn-box a {
+  position: relative;
   display: inline-flex;
   justify-content: center;
   align-items: center;
   width: 150px;
   height: 100%;
-  background: #00abf0;
+  background: #197ca3;
   border: 2px solid #00abf0;
   border-radius: 8px;
   font-size: 19px;
@@ -101,9 +120,37 @@ body {
   text-decoration: none;
   font-weight: 600;
   letter-spacing: 1px;
+  z-index: 1;
+  overflow: hidden;
 }
 
-.btn-box a:nth-child(1) {
+.home-sci {
+  position: absolute;
+  bottom: 40px;
+  width: 170px;
+  height: 170px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.home-sci a {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
   background: transparent;
+  border: 2px solid #197ca3;
+  border-radius: 50%;
+  font-size: 20px;
   color: #00abf0;
+  text-decoration: none;
+}
+
+/* KEYFRAMES ANIMATION   */
+
+@keyframes showRight {
+  100% {
+    width: 0;
+  }
 }
